FIX: alignment and some major UI issues

--- a/src/components/common/SpeechToText/SpeechToText.css
+++ b/src/components/common/SpeechToText/SpeechToText.css
@@ -9,7 +9,7 @@
 }
 
 .speech-to-text-left {
-  @apply bg-black w-full flex justify-between h-[36px] text-xs text-white placeholder-white placeholder:uppercase border-[#D9D9D9] dark:border-white;
+  @apply bg-black w-full flex justify-between h-[36px] text-xs text-white placeholder-white placeholder:uppercase border-[#D9D9D9] dark:border-white overflow-hidden;
   border-width: 0.5px;
   border-style: solid;
 }
